<resources>
    <string name="app_name">Diary Notes App</string>
    <string name="title_home">Home</string>
    <string name="title_tasks">Tasks</string>
    <string name="title_notes">Notes</string>
    <string name="title_alerts">Alerts</string>
    <string name="extended_fab_note">Add Note</string>
    <string name="extended_fab_task">Add Task</string>
    <string name="extended_fab_refresh">Refresh</string>
    <string name="title_activity_task_data">TaskDataActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="input_task">Input task</string>
    <string name="task_name">Task Name</string>
    <string name="task_details">Task Details</string>
    <string name="due_date">Due Date</string>
    <string name="progress">Progress (%)</string>
    <string name="more">More</string>
    <string name="content_description_more">Get More Actions</string>
    <string name="note_title">\tNote Title</string>
    <string name="error_too_few_characters">You need to input more characters!</string>
</resources>