<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.TaskActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/task_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/title_tasks"
            app:menu="@menu/task_top_app_bar_menu"

            app:navigationIcon="@drawable/ic_close_24dp"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:paddingTop="?attr/actionBarSize"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField"
                style="?attr/textInputOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/task_name"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                android:maxLines="1"
                app:endIconContentDescription="Clear Content"
                app:endIconMode="clear_text"
                app:helperText="Input your text"
                tools:ignore="MissingConstraints">
            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/task_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/detailsField"
                style="?attr/textInputOutlinedStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/task_details"
                app:counterEnabled="true"
                app:counterMaxLength="9999"
                app:endIconContentDescription="Clear Content"
                app:endIconMode="clear_text"
                app:helperText="Input text"
                tools:ignore="MissingConstraints">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/task_details"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>


                <DatePicker
                    android:id="@+id/date_picker_calendar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:calendarViewShown="true"
                    android:spinnersShown="true" />

                <DatePicker
                    android:id="@+id/date_picker_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:calendarViewShown="false"
                    android:spinnersShown="true"
                    android:datePickerMode="spinner"/>


                <com.google.android.material.slider.Slider
                    android:id="@+id/slider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:stepSize="5.0"
                    android:valueFrom="0.0"
                    android:valueTo="100.0"
                    tools:ignore="MissingConstraints" />

            <Button
                android:id="@+id/filledButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Save"
                tools:ignore="MissingConstraints" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>